[package]
name = "rlox"
authors = ["James Smith <j@mes.sh>"]
version = "0.2.0"
edition = "2021"
description = "rlox: interpreter/compiler of the lox language"
readme = "README.md"
license-file = "LICENSE"
keywords = ["language", "lox"]
publish = false
repository = "https://gitlab.com/exicx/rlox"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
incremental = true
strip = true
opt-level = "s"
codegen-units = 1
