[package]
name = "rlox"
authors = ["James Smith <j@mes.sh>"]
version = "0.5.0"
edition = "2021"
description = "rlox: interpreter/compiler of the lox language"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["language", "lox"]
publish = false
repository = "https://gitlab.com/exicx/rlox"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
