[package]
name = "rlox"
authors = ["James Smyle <j@mes.sh>"]
version = "0.6.0"
edition = "2021"
description = "rlox: interpreter/compiler of the lox language"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["language", "lox"]
publish = false
repository = "https://gitlab.com/exicx/rlox"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
unicode-segmentation = "1.10.1"
